# triage-automation

./: .env.example  .gitignore  AGENTS.md  Dockerfile  PROJECT_CONTEXT.md  README.en.md  README.md  alembic.ini  ansible.cfg  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: publish.yml  quality-gates.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_prompt_templates.py  0008_case_matrix_message_transcripts.py  0009_transcript_case_chronological_indexes.py  0011_case_reaction_checkpoints.py  0013_user_account_status.py
ansible/playbooks/: bootstrap.yml  deploy.yml  rollback.yml
apps/bot_api/: main.py
apps/bot_matrix/: main.py
apps/worker/: main.py
docs/: ansible_ops_runbook.md  architecture.md  manual_e2e_runbook.md  runtime-smoke.md  security.md  setup.md
docs/en/: ansible_ops_runbook.md  architecture.md  manual_e2e_runbook.md  runtime-smoke.md  security.md  setup.md
tests/e2e/: test_full_case_flow.py
tests/integration/: test_admin_bootstrap_startup.py  test_bot_api_runtime.py  test_bot_matrix_room1_listener_runtime.py  test_case_repositories.py  test_dashboard_pages.py  test_llm_prompt_loading_runtime.py  test_login_endpoint.py  test_max_retries_failure_path.py  test_migration_case_matrix_message_transcripts.py  test_migration_case_reaction_checkpoints.py  test_migration_initial_schema.py  test_migration_prompt_templates.py  test_migration_transcript_case_indexes.py  test_migration_user_account_status.py  test_monitoring_case_detail_endpoint.py  test_monitoring_case_list_endpoint.py  test_post_room2_widget.py  test_post_room3_request.py  test_process_pdf_case_download_extract.py  test_process_pdf_case_llm1.py  test_process_pdf_case_llm2.py  test_process_pdf_case_record_strip.py  test_prompt_management_admin_endpoints.py  test_prompt_template_repository.py  test_reaction_cleanup_trigger.py  (+13 more)
(+297 files in other folders)
