[project]
name = "triage-automation"
version = "0.1.0"
description = "Triage automation services"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "aiosqlite>=0.21.0,<1",
  "alembic>=1.17.2,<2",
  "greenlet>=3.2.4,<4",
  "pydantic>=2.11.9,<3",
  "pydantic-settings>=2.11.0,<3",
  "sqlalchemy>=2.0.44,<3",
]

[dependency-groups]
dev = [
  "mypy>=1.18.2,<2",
  "pytest>=8.4.2,<9",
  "pytest-asyncio>=1.2.0,<2",
  "ruff>=0.13.2,<1",
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"
