[project]
name = "triage-automation"
version = "0.1.0"
description = "Triage automation services"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12,<3.13"
dependencies = [
  "aiosqlite>=0.21.0,<1",
  "alembic>=1.17.2,<2",
  "bcrypt>=5.0.0,<6",
  "fastapi>=0.118.0,<1",
  "greenlet>=3.2.4,<4",
  "pydantic>=2.11.9,<3",
  "pydantic-settings>=2.11.0,<3",
  "pypdf>=6.1.3,<7",
  "sqlalchemy>=2.0.44,<3",
  "uvicorn>=0.37.0,<1",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1,<1",
  "mypy>=1.18.2,<2",
  "pytest>=8.4.2,<9",
  "pytest-asyncio>=1.2.0,<2",
  "ruff>=0.13.2,<1",
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"
